--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gamee_hacker_app">
    <application
-        android:label="gamee_hacker_app"
+        android:label="Telegram Gamee Hack"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-4779220143200061~8343333723"/>
+            
         <activity
             android:name=".MainActivity"
             android:exported="true"
