--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.12.0"
+  change_app_package_name: ^1.1.0
 
 flutter_icons:
   android: true
